fix(lint-staged): run test only on test files

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
-  "*.{ts,tsx}": ["yarn lint:check", "yarn prettier:write", "yarn test"],
-  "*.{html,css,js,json,md}": "yarn prettier:write"
+  "*.{ts,tsx}": ["yarn lint:check", "yarn prettier:write"],
+  "*.{html,css,js,json,md}": "yarn prettier:write",
+  "*.test.{ts,tsx}": "yarn test"
 }
