--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/preact": "^3.2.3",
     "@typescript-eslint/parser": "^6.10.0",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
     "eslint": "^8.53.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^9.0.0",
