--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"yarn tw:watch\" \"vite\"",
-    "build": "tw:build & vite build",
+    "build": "yarn tw:build && vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:dev": "vitest --allowOnly",
