fix: remove /core

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:dev": "vitest --allowOnly",
-    "test:unit": "vitest run ./src/features/**/hooks/ ./src/features/**/util/ ./src/core/hooks/ ./src/core/util/",
-    "test:components": "vitest run ./src/features/**/components/** ./src/**/components/**",
+    "test:unit": "vitest run ./src/features/**/hooks/ ./src/features/**/util/ ./src/hooks/ ./src/util/",
+    "test:components": "vitest run ./src/features/ ./src/**/components/**",
     "prettier:write": "prettier -u -w --ignore-path .gitignore \"*.{ts,tsx,css,html}\"",
     "lint:check": "eslint --fix --ext .ts,tsx --ignore-path .gitignore .",
     "ts:check": "tsc --noEmit",
