--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "max-lines": 0,
     "no-magic-numbers": "off",
     "no-var": "error",
-    "one-var": "off"
+    "one-var": "off",
+    "sort-imports": "off"
   }
 }
