--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@preact/signals": "^1.2.1",
     "@types/cypress": "^1.1.3",
     "clsx": "^2.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "preact": "^10.13.1",
-    "tailwind-merge": "^2.0.0"
+    "preact-router": "^4.1.2",
+    "react-router-dom": "^6.20.0",
+    "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.0.0",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
